plugins {
    id 'java'
    id 'application'
}

group = 'dev.mydogsed'
version = '1.1.0-env'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // JUnit for testing
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation('org.junit.jupiter:junit-jupiter')

    // JDA
    implementation("net.dv8tion:JDA:6.4.0")

    // Logback for logging
    implementation("ch.qos.logback:logback-classic:1.5.32")

    // Hibernate for database
    implementation platform("org.hibernate.orm:hibernate-platform:6.6.11.Final")
    implementation('org.hibernate.orm:hibernate-core')
    implementation('org.hibernate.orm:hibernate-community-dialects')
    implementation("jakarta.transaction:jakarta.transaction-api")

    // sqlite jdbc driver
    implementation('org.xerial:sqlite-jdbc:3.49.1.0')

    // Mockito for mocking JDA
    testImplementation("org.mockito:mockito-core:4.11.0")
    testImplementation("org.mockito:mockito-junit-jupiter:4.11.0")

    // dotenv for .env
    implementation("io.github.cdimascio:dotenv-java:3.2.0")
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'dev.mydogsed.sollexicalanalyzer.Main'
}
